--- a/client/src/styles/custom.css
+++ b/client/src/styles/custom.css
@@ -43,3 +43,23 @@
   font-size: 0.875rem;
   border-radius: 0.2rem;
 }
+
+.custom-image {
+  width: 100%;
+  height: auto;
+  object-fit: contain;
+  max-width: 500px;
+  max-height: 500px;
+}
+
+.footer-logo {
+  max-width: 100px;
+  height: auto;
+}
+
+.img-small {
+  max-width: 80%;
+  height: auto;
+  display: block;
+  margin: 0 auto;
+}
