--- a/client/src/styles/components/login.css
+++ b/client/src/styles/components/login.css
@@ -23,9 +23,20 @@
   padding: 0 5px;
 }
 
-.custom-button {
+/* .custom-button {
   background-color: #a435f0;
   border: 1px solid #ad67f0;
+} */
+
+.btn.btn-primary.custom-button {
+  background-color: #a435f0;
+  border: 1px solid #ad67f0;
+}
+
+.btn.btn-primary.custom-button:disabled {
+  background-color: #a435f0;
+  border: 1px solid #ad67f0;
+  opacity: 0.65; /* 為禁用狀態添加透明度 */
 }
 
 .custom-button:hover {
@@ -59,4 +70,24 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.loading-spinner {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  border: 2px solid #ffffff;
+  border-radius: 50%;
+  border-top: 2px solid #007bff;
+  animation: spin 1s linear infinite;
+  margin-right: 10px;
 }
