--- a/client/src/styles/components/course-card.css
+++ b/client/src/styles/components/course-card.css
@@ -1,3 +1,12 @@
+.image-hover {
+  width: 14.5rem;
+}
+
+.card-img-size {
+  width: 15.5rem;
+  height: 8.5rem;
+}
+
 .image-hover:hover .course-imager {
   opacity: 0.6;
   transition: 0.3s ease;
@@ -16,7 +25,6 @@
   opacity: 1;
   visibility: visible;
 }
-
 
 .course-card-scroller {
   position: relative;
